# telegram-bot

./: README.md  config.example.toml  logging_config.example.json  logging_config.json  pyproject.toml
src/: config.py  logger.py  main.py  parsers.py
src/callback_data/: __init__.py  sales.py  salesmans.py
src/enums/: __init__.py  user_roles.py
src/exceptions/: __init__.py  admins.py  bots.py  codes.py  invitations.py  parsers.py  sales.py  salesmans.py  server.py
src/filters/: __init__.py  admins.py  code.py  invitations.py  salesmans.py  user_roles.py
src/handlers/: __init__.py  admins.py  clients_statistics.py  code_input.py  errors.py  invitations.py  mailings.py  scan.py  start.py  support.py
src/handlers/codes/: __init__.py  cancel_sale.py  deep_link.py  manual_input.py
src/handlers/sales/: __init__.py  deep_link.py  (+2 more)
src/middlewares/: __init__.py  api_repositories_initializer.py  http_client_initalizer.py  users.py
src/models/: __init__.py  admins.py  bots.py  clients.py  invitations.py  responses.py  sale_groups.py  sales.py  salesmans.py  users.py
src/repositories/: __init__.py  admins.py  base.py  bots.py  employees.py  gifts.py  invitations.py  mailing.py  sales.py  salesmans.py  shop_groups.py  users.py
src/services/: notifiers.py  qr_code.py
src/states/: __init__.py  mailing.py  sale_temporary_codes.py
src/views/: __init__.py  base.py  clients_statistics.py  code.py  employees.py  invitations.py  mailing.py  qr_code.py  salesmans.py  start.py  support.py
tests/test_filters/: test_code_deeplink_filter.py  test_code_input_filter.py
(+3 files in other folders)
